# project_template_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  conanfile.txt
cmake/: CodeCoverage.cmake
sources/: CMakeLists.txt
sources/data/: data_thread.cpp  data_thread.h
sources/gui/: main_window.cpp
src/: CMakeLists.txt  main.cpp
src/data/: data_thread.cpp  data_thread.h
src/gui/: main_window.cpp  main_window.h
tests/: CMakeLists.txt  TestRunner.h  main.cpp
tools/cmake/: CodeCoverage.cmake  CxxFlags.cmake  functions.cmake  options.cmake
tools/logs_helper/: CMakeLists.txt  loggers.cpp  loggers.h  logging_base.cpp  logging_base.h  qtTools.cpp  qtTools.h
